DevOps-main/Kubernetes-Troubleshooting/08-pod-networking/client-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client
  labels:
    role: client
spec:
  containers:
    - name: client
      image: curlimages/curl:8.6.0
      command: ["sleep", "3600"]
